refactor(auth): make ORCID primary user identity
